<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme"
    android:padding="2dp"
    tools:context=".model.view.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#4DFFFFFF"
            android:padding="15dp"
            android:text="@string/error_try_again"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/pb_loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4DFFFFFF"
                android:orientation="horizontal"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#55FFFFFF"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_city_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/city_name"
                        android:inputType="text"
                        android:lines="1"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/img_search_city"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:src="@drawable/baseline_search_24"
                    android:contentDescription="@string/search_icon" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="25dp">

                    <TextView
                        android:id="@+id/tv_degree"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#e76f51"
                        android:fontFamily="@font/lato_light"
                        android:gravity="center"
                        android:text="@string/test"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="120sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    app:cardBackgroundColor="#2a9d8f"
                    app:cardCornerRadius="5dp"

                    >

                    <TextView
                        android:id="@+id/tv_description"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/lato_light"
                        android:gravity="center"
                        android:text="@string/test"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    app:cardBackgroundColor="@color/pink"
                    app:cardCornerRadius="20dp"

                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#e9c46a"
                        android:orientation="horizontal"
                        android:padding="15dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/tv_city_code"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/city_code"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="17sp" />

                            <TextView
                                android:id="@+id/tv_city_name"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/city_name"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="24sp" />

                        </LinearLayout>


                        <ImageView
                            android:id="@+id/img_weather_pictures"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="30dp"
                            android:src="@drawable/baseline_cloud_24"
                            android:contentDescription="@string/weather_icon"
                            />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cardBackgroundColor="@color/purple"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#264653"
                        android:orientation="horizontal"
                        android:padding="15dp"
                        >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="30dp"
                            android:orientation="vertical"
                            android:padding="6dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/feels_like"
                                android:textColor="@color/white"
                                android:textSize="17sp" />

                            <!--Nem-->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/humidity"
                                android:textColor="@color/white"
                                android:textSize="17sp" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/wind_speed"
                                android:textColor="@color/white"
                                android:textSize="17sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/visibility"
                                android:textColor="@color/white"
                                android:textSize="17sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/latitude"
                                android:textColor="@color/white"
                                android:textSize="17sp" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/longitude"
                                android:textColor="@color/white"
                                android:textSize="17sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:orientation="vertical"
                            android:padding="6dp">

                            <TextView
                                android:id="@+id/tv_feels_like"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/data0"
                                android:textSize="17sp" />

                            <TextView
                                android:id="@+id/tv_humidity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/data1"
                                android:textSize="17sp" />

                            <TextView
                                android:id="@+id/tv_wind_speed"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/data2"
                                android:textSize="17sp" />

                            <TextView
                                android:id="@+id/tv_visibility"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/data3"
                                android:textSize="17sp"/>

                            <TextView
                                android:id="@+id/tv_lat"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/data4"
                                android:textSize="17sp" />

                            <TextView
                                android:id="@+id/tv_lon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/data5"
                                android:textSize="17sp" />



                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>